--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.data.redis.port=${REDIS_PORT}
 server.port=8080
 
 # JWT Configuration
-jwt.secret=your-256-bit-secret-key-for-jwt-token-generation-minimum-32-characters-long-secure-key
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:86400000}
