--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -6,3 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.sql.init.mode=never
+
+# JWT Test Configuration
+jwt.secret=test-secret-key-minimum-32-chars-for-hmac-sha256
+jwt.expiration=86400000
