--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.9.1
   flutter_secure_storage: ^10.0.0
   shared_preferences: ^2.5.4
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
