feat: Add Task creation functionality for elderly users

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -10,3 +10,7 @@ spring.sql.init.mode=never
 # JWT Test Configuration
 jwt.secret=test-secret-key-minimum-32-chars-for-hmac-sha256
 jwt.expiration=86400000
+
+# Mock Redis config for tests to prevent unresolved placeholders
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
